Fix: Make Jinja2 templates robust against dict-wrapped raw output

--- a/onboarding_command_mappers/paloalto_panos.yml
+++ b/onboarding_command_mappers/paloalto_panos.yml
@@ -47,7 +47,8 @@ sync_devices:
         parser: "raw"
         jpath: "@"
         post_processor: |
-          {%- set lines = obj.replace('\r', '').split('\n') -%}
+          {%- set raw_obj = obj.raw if obj is mapping else obj -%}
+          {%- set lines = raw_obj.replace(\'\r\', \'\').split(\'\n\') -%}
           {%- set result = '' -%}
           {%- for line in lines -%}
             {%- if 'model:' in line.lower() -%}
@@ -65,7 +66,8 @@ sync_devices:
         parser: "raw"
         jpath: "@"
         post_processor: |
-          {%- set lines = obj.replace('\r', '').split('\n') -%}
+          {%- set raw_obj = obj.raw if obj is mapping else obj -%}
+          {%- set lines = raw_obj.replace(\'\r\', \'\').split(\'\n\') -%}
           {%- set manufacturer = 'Palo Alto Networks' -%}
           {%- set model = '' -%}
           {%- for line in lines -%}
@@ -95,7 +97,8 @@ sync_devices:
         parser: "raw"
         jpath: "@"
         post_processor: |
-          {%- set lines = obj.replace('\r', '').split('\n') -%}
+          {%- set raw_obj = obj.raw if obj is mapping else obj -%}
+          {%- set lines = raw_obj.replace(\'\r\', \'\').split(\'\n\') -%}
           {%- set result = '' -%}
           {%- for line in lines -%}
             {%- if 'sw-version:' in line.lower() -%}
@@ -113,7 +116,8 @@ sync_devices:
         parser: "raw"
         jpath: "@"
         post_processor: |
-          {%- set lines = obj.replace('\r', '').split('\n') -%}
+          {%- set raw_obj = obj.raw if obj is mapping else obj -%}
+          {%- set lines = raw_obj.replace(\'\r\', \'\').split(\'\n\') -%}
           {%- set result = '' -%}
           {%- for line in lines -%}
             {%- if 'hostname:' in line.lower() -%}
@@ -131,7 +135,8 @@ sync_devices:
         parser: "raw"
         jpath: "@"
         post_processor: |
-          {%- set lines = obj.replace('\r', '').split('\n') -%}
+          {%- set raw_obj = obj.raw if obj is mapping else obj -%}
+          {%- set lines = raw_obj.replace(\'\r\', \'\').split(\'\n\') -%}
           {%- set result = '' -%}
           {%- for line in lines -%}
             {%- if 'serial:' in line.lower() -%}
@@ -149,7 +154,8 @@ sync_devices:
         parser: "raw"
         jpath: "@"
         post_processor: |
-          {%- set lines = obj.replace('\r', '').split('\n') -%}
+          {%- set raw_obj = obj.raw if obj is mapping else obj -%}
+          {%- set lines = raw_obj.replace(\'\r\', \'\').split(\'\n\') -%}
           {%- set result = '' -%}
           {%- for line in lines -%}
             {%- if 'ip-address:' in line.lower() -%}
@@ -182,7 +188,8 @@ sync_devices:
         parser: "raw"
         jpath: "@"
         post_processor: |
-          {%- set lines = obj.replace('\r', '').split('\n') -%}
+          {%- set raw_obj = obj.raw if obj is mapping else obj -%}
+          {%- set lines = raw_obj.replace(\'\r\', \'\').split(\'\n\') -%}
           {%- set result = '24' -%}
           {%- for line in lines -%}
             {%- if 'ip-address:' in line.lower() -%}
@@ -204,7 +211,8 @@ sync_network_data:
         parser: "raw"
         jpath: "@"
         post_processor: |
-          {%- set lines = obj.replace('\r', '').split('\n') -%}
+          {%- set raw_obj = obj.raw if obj is mapping else obj -%}
+          {%- set lines = raw_obj.replace(\'\r\', \'\').split(\'\n\') -%}
           {%- for line in lines -%}
             {%- if 'serial:' in line.lower() and ':' in line -%}
               {{ line.split(':', 1)[1].strip() }}
@@ -217,7 +225,8 @@ sync_network_data:
         parser: "raw"
         jpath: "@"
         post_processor: |
-          {%- set lines = obj.replace('\r', '').split('\n') -%}
+          {%- set raw_obj = obj.raw if obj is mapping else obj -%}
+          {%- set lines = raw_obj.replace(\'\r\', \'\').split(\'\n\') -%}
           {%- set result = 'unknown' -%}
           {%- for line in lines -%}
             {%- set lower_line = line.lower() -%}
@@ -236,7 +245,8 @@ sync_network_data:
         parser: "raw"
         jpath: "@"
         post_processor: |
-          {%- set lines = obj.replace('\r', '').split('\n') -%}
+          {%- set raw_obj = obj.raw if obj is mapping else obj -%}
+          {%- set lines = raw_obj.replace(\'\r\', \'\').split(\'\n\') -%}
           {%- set cables = [] -%}
           {# Simple LLDP parser #}
           {%- set ns = namespace(local_port=none) -%}
@@ -263,7 +273,8 @@ sync_network_data:
         parser: "raw"
         jpath: "@"
         post_processor: |
-          {%- set lines = obj.replace('\r', '').split('\n') -%}
+          {%- set raw_obj = obj.raw if obj is mapping else obj -%}
+          {%- set lines = raw_obj.replace(\'\r\', \'\').split(\'\n\') -%}
           {%- set vrfs = {} -%}
           {%- set ns = namespace(in_vr=false, level=0, vr_level=-1, current_vr=none) -%}
           {%- for line in lines -%}
@@ -297,7 +308,8 @@ sync_network_data:
         parser: "raw"
         jpath: "@"
         post_processor: |
-          {%- set lines = obj.replace('\r', '').split('\n') -%}
+          {%- set raw_obj = obj.raw if obj is mapping else obj -%}
+          {%- set lines = raw_obj.replace(\'\r\', \'\').split(\'\n\') -%}
           {%- set vlans = {} -%}
           {%- for line in lines -%}
             {%- set stripped = line.strip() -%}
@@ -322,7 +334,8 @@ sync_network_data:
         parser: "raw"
         jpath: "@"
         post_processor: |
-          {%- set lines = obj.replace('\r', '').split('\n') -%}
+          {%- set raw_obj = obj.raw if obj is mapping else obj -%}
+          {%- set lines = raw_obj.replace(\'\r\', \'\').split(\'\n\') -%}
           {%- set ns = namespace(
               config_interfaces={},
               vrf_map={},
@@ -503,7 +516,8 @@ sync_devices:
         parser: "raw"
         jpath: "@"
         post_processor: |
-          {%- set lines = obj.replace('\r', '').split('\n') -%}
+          {%- set raw_obj = obj.raw if obj is mapping else obj -%}
+          {%- set lines = raw_obj.replace(\'\r\', \'\').split(\'\n\') -%}
           {%- set ns = namespace(result='') -%}
           {%- for line in lines -%}
             {%- if 'model:' in line.lower() and not ns.result -%}
@@ -521,7 +535,8 @@ sync_devices:
         parser: "raw"
         jpath: "@"
         post_processor: |
-          {%- set lines = obj.replace('\r', '').split('\n') -%}
+          {%- set raw_obj = obj.raw if obj is mapping else obj -%}
+          {%- set lines = raw_obj.replace(\'\r\', \'\').split(\'\n\') -%}
           {%- set manufacturer = 'Palo Alto Networks' -%}
           {%- set ns = namespace(model='') -%}
           {%- for line in lines -%}
@@ -551,7 +566,8 @@ sync_devices:
         parser: "raw"
         jpath: "@"
         post_processor: |
-          {%- set lines = obj.replace('\r', '').split('\n') -%}
+          {%- set raw_obj = obj.raw if obj is mapping else obj -%}
+          {%- set lines = raw_obj.replace(\'\r\', \'\').split(\'\n\') -%}
           {%- set ns = namespace(result='') -%}
           {%- for line in lines -%}
             {%- if 'sw-version:' in line.lower() -%}
@@ -569,7 +585,8 @@ sync_devices:
         parser: "raw"
         jpath: "@"
         post_processor: |
-          {%- set lines = obj.replace('\r', '').split('\n') -%}
+          {%- set raw_obj = obj.raw if obj is mapping else obj -%}
+          {%- set lines = raw_obj.replace(\'\r\', \'\').split(\'\n\') -%}
           {%- set ns = namespace(result='') -%}
           {%- for line in lines -%}
             {%- if 'hostname:' in line.lower() and not ns.result -%}
@@ -587,7 +604,8 @@ sync_devices:
         parser: "raw"
         jpath: "@"
         post_processor: |
-          {%- set lines = obj.replace('\r', '').split('\n') -%}
+          {%- set raw_obj = obj.raw if obj is mapping else obj -%}
+          {%- set lines = raw_obj.replace(\'\r\', \'\').split(\'\n\') -%}
           {%- set ns = namespace(result='') -%}
           {%- for line in lines -%}
             {%- if 'serial:' in line.lower() and not ns.result -%}
@@ -605,7 +623,8 @@ sync_devices:
         parser: "raw"
         jpath: "@"
         post_processor: |
-          {%- set lines = obj.replace('\r', '').split('\n') -%}
+          {%- set raw_obj = obj.raw if obj is mapping else obj -%}
+          {%- set lines = raw_obj.replace(\'\r\', \'\').split(\'\n\') -%}
           {%- set ns = namespace(result='') -%}
           {%- for line in lines -%}
             {%- if 'ip-address:' in line.lower() and not ns.result -%}
@@ -635,7 +654,8 @@ sync_devices:
         parser: "raw"
         jpath: "@"
         post_processor: |
-          {%- set lines = obj.replace('\r', '').split('\n') -%}
+          {%- set raw_obj = obj.raw if obj is mapping else obj -%}
+          {%- set lines = raw_obj.replace(\'\r\', \'\').split(\'\n\') -%}
           {%- set ns = namespace(result='') -%}
           {%- for line in lines -%}
             {%- if 'ip-address:' in line.lower() and not ns.result -%}
@@ -659,7 +679,8 @@ sync_network_data:
         parser: "raw"
         jpath: "@"
         post_processor: |
-          {%- set lines = obj.replace('\r', '').split('\n') -%}
+          {%- set raw_obj = obj.raw if obj is mapping else obj -%}
+          {%- set lines = raw_obj.replace(\'\r\', \'\').split(\'\n\') -%}
           {%- for line in lines -%}
             {%- if 'serial:' in line.lower() and ':' in line -%}
               {{ line.split(':', 1)[1].strip() }}
@@ -672,7 +693,8 @@ sync_network_data:
         parser: "raw"
         jpath: "@"
         post_processor: |
-          {%- set lines = obj.replace('\r', '').split('\n') -%}
+          {%- set raw_obj = obj.raw if obj is mapping else obj -%}
+          {%- set lines = raw_obj.replace(\'\r\', \'\').split(\'\n\') -%}
           {%- set result = 'unknown' -%}
           {%- for line in lines -%}
             {%- set lower_line = line.lower() -%}
@@ -691,7 +713,8 @@ sync_network_data:
         parser: "raw"
         jpath: "@"
         post_processor: |
-          {%- set lines = obj.replace('\r', '').split('\n') -%}
+          {%- set raw_obj = obj.raw if obj is mapping else obj -%}
+          {%- set lines = raw_obj.replace(\'\r\', \'\').split(\'\n\') -%}
           {%- set cables = [] -%}
           {# Simple LLDP parser #}
           {%- set ns = namespace(local_port=none) -%}
@@ -718,7 +741,8 @@ sync_network_data:
         parser: "raw"
         jpath: "@"
         post_processor: |
-          {%- set lines = obj.replace('\r', '').split('\n') -%}
+          {%- set raw_obj = obj.raw if obj is mapping else obj -%}
+          {%- set lines = raw_obj.replace(\'\r\', \'\').split(\'\n\') -%}
           {%- set vrfs = {} -%}
           {%- set ns = namespace(in_vr=false, level=0, vr_level=-1, current_vr=none) -%}
           {%- for line in lines -%}
@@ -752,7 +776,8 @@ sync_network_data:
         parser: "raw"
         jpath: "@"
         post_processor: |
-          {%- set lines = obj.replace('\r', '').split('\n') -%}
+          {%- set raw_obj = obj.raw if obj is mapping else obj -%}
+          {%- set lines = raw_obj.replace(\'\r\', \'\').split(\'\n\') -%}
           {%- set vlans = {} -%}
           {%- for line in lines -%}
             {%- set stripped = line.strip() -%}
@@ -777,7 +802,8 @@ sync_network_data:
         parser: "raw"
         jpath: "@"
         post_processor: |
-          {%- set lines = obj.replace('\r', '').split('\n') -%}
+          {%- set raw_obj = obj.raw if obj is mapping else obj -%}
+          {%- set lines = raw_obj.replace(\'\r\', \'\').split(\'\n\') -%}
           {%- set ns = namespace(
               config_interfaces={},
               vrf_map={},
